fix: navigation and sidebar on mobile views

--- a/src/app/app-layout/app-layout.component.scss
+++ b/src/app/app-layout/app-layout.component.scss
@@ -132,7 +132,7 @@
   // box-shadow: 2px 0 10px rgba(0, 0, 0, 0.1);
   z-index: 1000;
   position: fixed;
-  top: 7rem;
+  top: 4.3rem;
   left: 0;
   height: 100%;
   transform: translateX(-100%); // Hidden by default
@@ -414,6 +414,12 @@ body.dark-theme .hamburger {
   flex-direction: column;
   @media screen and (max-width: 768px) {
     flex-direction: row;
+    align-items: center;
+    gap: 1rem;
     
   }
+}
+.user{
+  margin-left: 1rem;
+ 
 }
