--- a/src/app/components/noteeditor/note-editor.component.scss
+++ b/src/app/components/noteeditor/note-editor.component.scss
@@ -10,6 +10,11 @@
   justify-content: center;
   z-index: 999;
   animation: fadeIn 0.4s ease-out;
+  overflow: hidden;
+  width: 100%;
+  @media screen and (max-width: 768px) {
+    max-width: 100%;
+  }
 }
 
 .modal-content {
