--- a/src/app/components/themeswitcher/theme-switcher.component.scss
+++ b/src/app/components/themeswitcher/theme-switcher.component.scss
@@ -8,6 +8,12 @@
   border-radius: 0.375rem;
   cursor: pointer;
 
+  @media screen and (max-width: 768px) {
+    margin-left: 0;
+    width: 100%;
+    margin:  0 !important;
+    
+  }
  
   option {
     background-color: var(--bg-color);
