--- a/src/app/components/usermenu/user-menu.component.scss
+++ b/src/app/components/usermenu/user-menu.component.scss
@@ -14,11 +14,14 @@
       justify-content: center;
       border: 2px solid var(--secondary-color);
       cursor: pointer;
+      @media screen and (max-width: 768px) {
+        margin-left: 1rem;
+      }
     }
 
     .dropdown {
       position: absolute;
-      top: 3rem;
+      top: 1.8rem;
       right: 0;
       background: var(--bg-color);
       padding: 1rem;
@@ -29,11 +32,13 @@
       @media screen and (max-width: 768px) {
         left: 3rem;
         min-width: 300px;
+        top: -4rem;
       }
 
       p {
         margin: 0;
         font-size: 0.79rem;
+        color: var(--text-color);
       }
 
       button {
@@ -43,7 +48,9 @@
         text-align: left;
         padding: 0.5rem 0;
         font-size: 0.9rem;
+        margin-top: -1rem;
         cursor: pointer;
+        color: var(--text-color);
 
         &:hover {
           color: var(--primary-color);
